CCD-3086 Add JDK 17 to BEFTA Framework - jdk 17 declared in gradle.build, --add-opens jvm arg added to allow reflection